--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,14 @@ buildscript {
 	}
 }
 
+plugins {
+    id 'org.springframework.boot' version '1.5.2.RELEASE'
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'war'
+apply plugin: 'io.spring.dependency-management'
+
 
 group = 'com.bussiness.logic'
 version = '0.0.1-SNAPSHOT'
