--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,11 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+        classpath(
+                'org.springframework.boot:spring-boot-gradle-plugin:1.2.5.RELEASE',
+                'org.unbroken-dome.gradle-plugins:gradle-testsets-plugin:1.0.2'
+        )
+    }
 }
 
 plugins {
@@ -17,6 +20,8 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'io.spring.dependency-management'
+
+
 
 
 group = 'com.bussiness.logic'
@@ -32,11 +37,19 @@ configurations {
 }
 
 dependencies {
+
+
+ 	compile('org.springframework.boot:spring-boot-starter-jdbc')
+ 	runtime('mysql:mysql-connector-java')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-web-services')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
-	compile 'mysql:mysql-connector-java'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-cloud-connectors', version: '2.0.3.RELEASE'
+    compile(
+            'org.springframework.boot:spring-boot-starter-actuator',
+            'org.springframework.boot:spring-boot-starter-thymeleaf'
+    )
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
