--- a/bin/application.properties
+++ b/bin/application.properties
@@ -4,4 +4,4 @@ server.context-path=/mouryasamaj
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mourya_samaj
 spring.datasource.username=root
-spring.datasource.password=Navin@123
+spring.datasource.password=
