--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'war'
 
 
 
